# thanos

./: .gitignore  BUILD.bazel  WORKSPACE  go.sum
cmd/thanos/: BUILD.bazel
pkg/alert/: BUILD.bazel
pkg/api/: BUILD.bazel
pkg/api/blocks/: BUILD.bazel
pkg/api/query/: BUILD.bazel
pkg/api/rule/: BUILD.bazel
pkg/block/: BUILD.bazel
pkg/block/indexheader/: BUILD.bazel
pkg/block/metadata/: BUILD.bazel
pkg/cache/: BUILD.bazel
pkg/cacheutil/: BUILD.bazel
pkg/compact/: BUILD.bazel
pkg/compact/downsample/: BUILD.bazel
pkg/compactv2/: BUILD.bazel
pkg/component/: BUILD.bazel
pkg/dedup/: BUILD.bazel
pkg/discovery/cache/: BUILD.bazel
pkg/discovery/dns/: BUILD.bazel
pkg/discovery/dns/godns/: BUILD.bazel
pkg/discovery/dns/miekgdns/: BUILD.bazel
pkg/discovery/memcache/: BUILD.bazel
pkg/errutil/: BUILD.bazel
pkg/exemplars/: BUILD.bazel
pkg/exemplars/exemplarspb/: BUILD.bazel
pkg/extflag/: BUILD.bazel
pkg/extgrpc/: BUILD.bazel
pkg/exthttp/: BUILD.bazel
pkg/extkingpin/: BUILD.bazel
pkg/extprom/: BUILD.bazel
pkg/extprom/http/: BUILD.bazel
pkg/gate/: BUILD.bazel
pkg/http/: BUILD.bazel
pkg/info/infopb/: BUILD.bazel
pkg/logging/: BUILD.bazel
pkg/metadata/: BUILD.bazel
pkg/metadata/metadatapb/: BUILD.bazel
pkg/model/: BUILD.bazel
pkg/objstore/: BUILD.bazel
pkg/objstore/azure/: BUILD.bazel
pkg/objstore/client/: BUILD.bazel
pkg/objstore/clientutil/: BUILD.bazel
pkg/objstore/cos/: BUILD.bazel
pkg/objstore/filesystem/: BUILD.bazel
pkg/objstore/gcs/: BUILD.bazel
pkg/objstore/objtesting/: BUILD.bazel
pkg/objstore/oss/: BUILD.bazel
pkg/objstore/s3/: BUILD.bazel
pkg/objstore/swift/: BUILD.bazel
pkg/pool/: BUILD.bazel
pkg/prober/: BUILD.bazel
pkg/promclient/: BUILD.bazel
pkg/query/: BUILD.bazel
pkg/query/internal/test-storeset-pre-v0.8.0/: BUILD.bazel
pkg/queryfrontend/: BUILD.bazel
pkg/receive/: BUILD.bazel
pkg/reloader/: BUILD.bazel
pkg/replicate/: BUILD.bazel
pkg/rules/: BUILD.bazel
pkg/rules/rulespb/: BUILD.bazel
pkg/runutil/: BUILD.bazel
pkg/server/grpc/: BUILD.bazel
pkg/server/http/: BUILD.bazel
pkg/server/http/middleware/: BUILD.bazel
pkg/shipper/: BUILD.bazel
pkg/store/: BUILD.bazel
pkg/store/cache/: BUILD.bazel
pkg/store/hintspb/: BUILD.bazel
pkg/store/labelpb/: BUILD.bazel
pkg/store/storepb/: BUILD.bazel
pkg/store/storepb/prompb/: BUILD.bazel
pkg/store/storepb/testutil/: BUILD.bazel
pkg/strutil/: BUILD.bazel
pkg/targets/: BUILD.bazel
pkg/targets/targetspb/: BUILD.bazel
pkg/testutil/: BUILD.bazel
pkg/testutil/e2eutil/: BUILD.bazel
pkg/testutil/testpromcompatibility/: BUILD.bazel
pkg/tls/: BUILD.bazel
pkg/tracing/: BUILD.bazel
pkg/tracing/client/: BUILD.bazel
pkg/tracing/elasticapm/: BUILD.bazel
pkg/tracing/jaeger/: BUILD.bazel
pkg/tracing/lightstep/: BUILD.bazel
pkg/tracing/stackdriver/: BUILD.bazel
pkg/ui/: BUILD.bazel
pkg/verifier/: BUILD.bazel
scripts/cfggen/: BUILD.bazel
scripts/copyright/: BUILD.bazel
test/e2e/: BUILD.bazel
test/e2e/e2ethanos/: BUILD.bazel
