load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/thanos-io/thanos
gazelle(name = "gazelle")

go_library(
    name = "thanos",
    srcs = ["doc.go"],
    importpath = "github.com/thanos-io/thanos",
    visibility = ["//visibility:public"],
)
