load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "thanos_lib",
    srcs = [
        "compact.go",
        "config.go",
        "downsample.go",
        "main.go",
        "query.go",
        "query_frontend.go",
        "receive.go",
        "rule.go",
        "sidecar.go",
        "store.go",
        "tools.go",
        "tools_bucket.go",
    ],
    importpath = "github.com/thanos-io/thanos/cmd/thanos",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/alert",
        "//pkg/api",
        "//pkg/api/blocks",
        "//pkg/api/query",
        "//pkg/api/rule",
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/compact/downsample",
        "//pkg/compactv2",
        "//pkg/component",
        "//pkg/dedup",
        "//pkg/discovery/cache",
        "//pkg/discovery/dns",
        "//pkg/errutil",
        "//pkg/exemplars",
        "//pkg/extflag",
        "//pkg/extgrpc",
        "//pkg/exthttp",
        "//pkg/extkingpin",
        "//pkg/extprom",
        "//pkg/extprom/http",
        "//pkg/gate",
        "//pkg/http",
        "//pkg/logging",
        "//pkg/metadata",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/objstore/client",
        "//pkg/prober",
        "//pkg/promclient",
        "//pkg/query",
        "//pkg/queryfrontend",
        "//pkg/receive",
        "//pkg/reloader",
        "//pkg/replicate",
        "//pkg/rules",
        "//pkg/runutil",
        "//pkg/server/grpc",
        "//pkg/server/http",
        "//pkg/server/http/middleware",
        "//pkg/shipper",
        "//pkg/store",
        "//pkg/store/cache",
        "//pkg/store/storepb",
        "//pkg/targets",
        "//pkg/tls",
        "//pkg/tracing",
        "//pkg/tracing/client",
        "//pkg/ui",
        "//pkg/verifier",
        "@com_github_alecthomas_units//:go_default_library",
        "@com_github_cortexproject_cortex//pkg/frontend:go_default_library",
        "@com_github_cortexproject_cortex//pkg/frontend/transport:go_default_library",
        "@com_github_cortexproject_cortex//pkg/querier/queryrange:go_default_library",
        "@com_github_cortexproject_cortex//pkg/util/validation:go_default_library",
        "@com_github_efficientgo_tools_extkingpin//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags:go_default_library",
        "@com_github_nytimes_gziphandler//:go_default_library",
        "@com_github_oklog_run//:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_common//route:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
        "@com_github_prometheus_prometheus//discovery/file:go_default_library",
        "@com_github_prometheus_prometheus//discovery/targetgroup:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
        "@com_github_prometheus_prometheus//rules:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//util/strutil:go_default_library",
        "@com_github_weaveworks_common//user:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_text//language:go_default_library",
        "@org_golang_x_text//message:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)

go_binary(
    name = "thanos",
    embed = [":thanos_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "thanos_test",
    srcs = [
        "main_test.go",
        "query_frontend_test.go",
        "query_test.go",
        "rule_test.go",
        "tools_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":thanos_lib"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/compact/downsample",
        "//pkg/objstore",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//promql:go_default_library",
    ],
)
