load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alert",
    srcs = [
        "alert.go",
        "config.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/alert",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/discovery/dns",
        "//pkg/http",
        "//pkg/runutil",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_alertmanager//api/v2/models:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "alert_test",
    srcs = [
        "alert_test.go",
        "config_test.go",
    ],
    embed = [":alert"],
    deps = [
        "//pkg/http",
        "//pkg/testutil",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
