load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/thanos-io/thanos/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/extprom/http",
        "//pkg/logging",
        "//pkg/server/http/middleware",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_nytimes_gziphandler//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_common//route:go_default_library",
        "@com_github_prometheus_common//version:go_default_library",
    ],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
    embed = [":api"],
    deps = [
        "//pkg/extprom/http",
        "//pkg/logging",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_common//route:go_default_library",
    ],
)
