load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "block",
    srcs = [
        "block.go",
        "fetcher.go",
        "index.go",
        "node.go",
        "writer.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/block",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/errutil",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/runutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_golang_groupcache//singleflight:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/errors:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/fileutil:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "block_test",
    srcs = [
        "block_test.go",
        "fetcher_test.go",
        "index_test.go",
    ],
    embed = [":block"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/objstore/objtesting",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
    ],
)
