load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "block",
    srcs = [
        "block.go",
        "fetcher.go",
        "index.go",
        "node.go",
        "writer.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/block",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/errutil",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/runutil",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_golang_groupcache//singleflight",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//pkg/relabel",
        "@com_github_prometheus_prometheus//tsdb",
        "@com_github_prometheus_prometheus//tsdb/chunks",
        "@com_github_prometheus_prometheus//tsdb/errors",
        "@com_github_prometheus_prometheus//tsdb/fileutil",
        "@com_github_prometheus_prometheus//tsdb/index",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "block_test",
    srcs = [
        "block_test.go",
        "fetcher_test.go",
        "index_test.go",
    ],
    embed = [":block"],
    deps = [
        "//pkg/block/metadata",
        "//pkg/extprom",
        "//pkg/model",
        "//pkg/objstore",
        "//pkg/objstore/objtesting",
        "//pkg/testutil",
        "//pkg/testutil/e2eutil",
        "@com_github_go_kit_kit//log",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_prometheus//pkg/labels",
        "@com_github_prometheus_prometheus//tsdb",
        "@com_github_prometheus_prometheus//tsdb/chunks",
        "@com_github_prometheus_prometheus//tsdb/index",
    ],
)
