load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "inmemory.go",
        "memcached.go",
        "tracing_cache.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cacheutil",
        "//pkg/model",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_hashicorp_golang_lru//simplelru:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "cache_test",
    srcs = [
        "inmemory_test.go",
        "memcached_test.go",
    ],
    embed = [":cache"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
    ],
)
