load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "inmemory.go",
        "memcached.go",
        "tracing_cache.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cacheutil",
        "//pkg/model",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_hashicorp_golang_lru//simplelru",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":cache",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cache_test",
    srcs = [
        "inmemory_test.go",
        "memcached_test.go",
    ],
    embed = [":cache"],
    deps = [
        "//pkg/testutil",
        "@com_github_go_kit_kit//log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus/testutil",
    ],
)
