load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cacheutil",
    srcs = [
        "jump_hash.go",
        "memcached_client.go",
        "memcached_server_selector.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/cacheutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/discovery/dns",
        "//pkg/discovery/memcache",
        "//pkg/extprom",
        "//pkg/gate",
        "//pkg/model",
        "@com_github_bradfitz_gomemcache//memcache:go_default_library",
        "@com_github_cespare_xxhash//:go_default_library",
        "@com_github_facette_natsort//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "cacheutil_test",
    srcs = [
        "cacheutil_test.go",
        "memcached_client_test.go",
        "memcached_server_selector_test.go",
    ],
    embed = [":cacheutil"],
    deps = [
        "//pkg/model",
        "//pkg/testutil",
        "@com_github_bradfitz_gomemcache//memcache:go_default_library",
        "@com_github_facette_natsort//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
