load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cacheutil",
    srcs = [
        "jump_hash.go",
        "memcached_client.go",
        "memcached_server_selector.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/cacheutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/discovery/dns",
        "//pkg/discovery/memcache",
        "//pkg/extprom",
        "//pkg/gate",
        "//pkg/model",
        "@com_github_bradfitz_gomemcache//memcache",
        "@com_github_cespare_xxhash//:xxhash",
        "@com_github_facette_natsort//:natsort",
        "@com_github_go_kit_kit//log",
        "@com_github_go_kit_kit//log/level",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "cacheutil_test",
    srcs = [
        "cacheutil_test.go",
        "memcached_client_test.go",
        "memcached_server_selector_test.go",
    ],
    embed = [":cacheutil"],
    deps = [
        "//pkg/model",
        "//pkg/testutil",
        "@com_github_bradfitz_gomemcache//memcache",
        "@com_github_facette_natsort//:natsort",
        "@com_github_go_kit_kit//log",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@org_uber_go_goleak//:goleak",
    ],
)
