load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "compactv2",
    srcs = [
        "changelog.go",
        "chunk_series_set.go",
        "compactor.go",
        "modifiers.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/compactv2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/errors:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tombstones:go_default_library",
    ],
)

go_test(
    name = "compactv2_test",
    srcs = ["compactor_test.go"],
    embed = [":compactv2"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_oklog_ulid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//pkg/relabel:go_default_library",
        "@com_github_prometheus_prometheus//tsdb:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunkenc:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/chunks:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/index:go_default_library",
        "@com_github_prometheus_prometheus//tsdb/tombstones:go_default_library",
    ],
)
