load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "exemplars",
    srcs = [
        "exemplars.go",
        "multitsdb.go",
        "prometheus.go",
        "proxy.go",
        "tsdb.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/exemplars",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/exemplars/exemplarspb",
        "//pkg/promclient",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/tracing",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_gogo_status//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@com_github_prometheus_prometheus//promql/parser:go_default_library",
        "@com_github_prometheus_prometheus//storage:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "exemplars_test",
    srcs = [
        "exemplars_test.go",
        "proxy_test.go",
        "tsdb_test.go",
    ],
    embed = [":exemplars"],
    deps = [
        "//pkg/exemplars/exemplarspb",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/testutil",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_prometheus//pkg/labels:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
