load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "extkingpin",
    srcs = [
        "app.go",
        "flags.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/extkingpin",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_efficientgo_tools_extkingpin//:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_oklog_run//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//model:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
    ],
)
