load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "extprom",
    srcs = [
        "extprom.go",
        "testing.go",
        "tx_gauge.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/extprom",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/testutil",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "extprom_test",
    srcs = ["tx_gauge_test.go"],
    embed = [":extprom"],
    deps = [
        "//pkg/testutil",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_model//go:go_default_library",
    ],
)
