load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gate",
    srcs = ["gate.go"],
    importpath = "github.com/thanos-io/thanos/pkg/gate",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_prometheus//pkg/gate:go_default_library",
    ],
)
